# fereshteh

./: .gitignore  Cargo.toml  README.md  pyproject.toml
scripts/: binary_class.sh  binaryclassification_animate_impl.py  binaryclassification_impl.py  binaryclassification_impl_cmdline.py  binaryclassification_impl_cmdline.sh  malware_load_clean.py  malware_train_simplenn.py  multiclass_eval.py  multiclass_impl.py  multiclass_impl.sh  run_hw02q7_background.sh  training_log.out
src/: lib.rs
src/cpe487587_hw01/: __init__.py
src/cpe487587_hw01/deepl/: __init__.py  two_layer_binary_classification.py
src/cpe487587hw01/: __init__.py
src/fereshteh/animation/: __init__.py
src/fereshteh/deepl/: __init__.py  multiclass.py  two_layer_binary_classification.py
