[project]
name = "cpe487587-hw01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rahul Bhadani", email = "kumarrahulbhadani@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "torch>=2.10.0",
]

[tool.maturin]
module-name = "cpe487587_hw01._core"
python-packages = ["cpe487587_hw01"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
