[project]
name = "cpe487587hw01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Fereshteh Molaverdi", email = "fm0032@uah.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "manim>=0.19.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "torch>=2.10.0",
]

[tool.maturin]
module-name = "cpe487587hw01._core"
python-packages = ["cpe487587hw01"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
